# opentargets

./: README.md  croissant_introspect.py  pyproject.toml  requirements.txt
opentargets/: __init__.py  croissant_introspect.py
tests/: test_croissant.py
